fix(poxl,health) correction du build